<resources>
    <string name="app_name">Apuntes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jessica Rubio</string>
    <string name="nav_header_subtitle">Apuntes Examens Evaluación 1</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu -->
    <string name="menu_Recycler">Recycler</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_camara">Camara</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_cambio_atributos">Cambio Atributos</string>

    <!-- Login -->
    <string name="st_usuario">Usuario:</string>
    <string name="st_contrasena">Contraseña:</string>
    <string name="st_iniciar_sesion">Iniciar sesión</string>
    <string name="st_crear_cuenta">Crear cuenta</string>
    <string name="todo">TODO</string>

    <!-- Calendario -->
    <string name="st_evento">Evento:</string>
    <string name="st_guardar">Guardar</string>

    <!-- Cambio atributos -->
    <string name="st_texto">TEXTO</string>
    <string name="st_negrita">Negrita</string>
    <string name="st_cursiva">Cursiva</string>
    <string name="st_subrayado">Subrayado</string>

    <!-- Menu Overflow-->
    <string name="st_opcion_1">Azul</string>
    <string name="st_opcion_2">Verde</string>
    <string name="st_opcion_3">Amarillo</string>
    <string name="st_opcion_4">Blanco</string>
    <string name="communicate">Communicate</string>


</resources>
