<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recycler"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Recycler" />
        <item
            android:id="@+id/nav_calendario"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_calendario" />
        <item
            android:id="@+id/nav_camara"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camara" />
        <item
            android:id="@+id/nav_cambio_atributos"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_cambio_atributos" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
