<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_recycler">

    <fragment
        android:id="@+id/nav_recycler"
        android:name="com.example.apuntes.ui.recycler.RecyclerFragment"
        android:label="@string/menu_Recycler"
        tools:layout="@layout/fragment_recycler" />

    <fragment
        android:id="@+id/nav_calendario"
        android:name="com.example.apuntes.ui.calendario.CalendarioFragment"
        android:label="@string/menu_calendario"
        tools:layout="@layout/fragment_calendario" />

    <fragment
        android:id="@+id/nav_camara"
        android:name="com.example.apuntes.ui.camara.camaraFragment"
        android:label="@string/menu_camara"
        tools:layout="@layout/fragment_camara" />

    <fragment
        android:id="@+id/nav_cambio_atributos"
        android:name="com.example.apuntes.ui.cambioAtributos.CambioAtributosFragment"
        android:label="@string/menu_cambio_atributos"
        tools:layout="@layout/fragment_cambio_atributos" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.apuntes.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.apuntes.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />


</navigation>