<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/opcion_azul"
        android:orderInCategory="100"
        android:title="@string/st_opcion_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/opcion_verde"
        android:orderInCategory="100"
        android:title="@string/st_opcion_2"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcion_amarillo"
        android:orderInCategory="100"
        android:title="@string/st_opcion_3"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcion_blanco"
        android:orderInCategory="100"
        android:title="@string/st_opcion_4"
        app:showAsAction="never" />


</menu>
