<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/im_iconoApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/ll_datos_login"
        android:layout_width="351dp"
        android:layout_height="273dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_iconoApp"
        app:layout_constraintVertical_bias="0.314">

        <TextView
            android:id="@+id/tv_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/st_usuario" />

        <EditText
            android:id="@+id/et_usuario_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="LabelFor,UnusedAttribute" />

        <TextView
            android:id="@+id/tv_contrasena_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/st_contrasena" />

        <EditText
            android:id="@+id/et_contrasena_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints=""
            tools:ignore="LabelFor,UnusedAttribute" />
    </LinearLayout>

    <Button
        style="@style/botones"
        android:id="@+id/btn_iniciar_sesion"
        android:layout_marginBottom="36dp"
        android:text="@string/st_iniciar_sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_crear_cuenta"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_datos_login"
        app:layout_constraintVertical_bias="0.557" />

    <Button
        style="@style/botones"
        android:id="@+id/btn_crear_cuenta"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="36dp"
        android:text="@string/st_crear_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_datos_login"
        app:layout_constraintVertical_bias="0.557" />

</androidx.constraintlayout.widget.ConstraintLayout>